dom/base/test/jsmodules/importmaps/good/module_3.js
import {} from "../circular_dependency.js";

export function exportedFunction() {
  return true;
}
